# imdb-top250-database

./: insert_movies_into_db.py  new_db.py  pyproject.toml  search_top250_by_genres.py
databases/: movies_top_250.db
